added by noshin

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/BusTicketBooking.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.JTattoo-1.6.11.jar=../income tax resource/JTattoo-1.6.11.jar
+file.reference.JTattoo-1.6.11.jar-1=C:\\Users\\noshi\\Desktop\\JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.JTattoo-1.6.11.jar}:\
-    ${libs.JavaDB.classpath}
+    ${libs.JavaDB.classpath}:\
+    ${file.reference.JTattoo-1.6.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
