--- a/NetBeansProjects/BusTicketBooking/nbproject/project.properties
+++ b/NetBeansProjects/BusTicketBooking/nbproject/project.properties
@@ -28,11 +28,15 @@ dist.jar=${dist.dir}/BusTicketBooking.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.JTattoo-1.6.11.jar=../income tax resource/JTattoo-1.6.11.jar
+file.reference.JTattoo-1.6.11.jar-1=E:\\JTattoo-1.6.11.jar
+file.reference.rs2xml.jar=G:\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.JTattoo-1.6.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,7 +46,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
